--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     implementation 'com.android.volley:volley:1.1.1'
+    implementation "com.yuyakaido.android:card-stack-view:2.3.4"
+
 }
